= BinData Changelog

== Version 2.5.0 (2023-xx-xx)

* Removed experimental :check_offset and :adjust_offset parameters.
* Ruby 2.5 is now required.
* Allow for nested tracing.
* Skip :until_valid is now fast for :asserted_value.

== Version 2.4.15 (2023-02-07)

* Added ruby 2.4.0 requirement to gemspec.  Thanks to theldoria.
* Added github CI action.  Thanks to Peter Goldstein.
* Convert file from latin1 to UTF-8.  Thanks to Cédric Boutillier.
* Move license from dual license to solely BSD-2-Clause.
* Remove unnecessary files from gem.  Requested by Orien Madgwick.
* Allow multiple calls to auto_call_delayed_io.  Thanks to dwelch-r7.

== Version 2.4.14 (2022-10-31)

* Use Comparable#clamp instead of manual calculations.
* Update tests to new minitest requirements.
* Adjust tests due to changes in ruby 3.1

== Version 2.4.13 (2022-10-16)

* Relax over-strict parameter naming requirements.  Requested by
  vinayak3qilabs.

== Version 2.4.12 (2022-10-03)

* Do not include DelayedIO objects when :onlyif is false.

== Version 2.4.11 (2022-09-27)

* Make DelayedIO work with :onlyif.  Reported by Spencer McIntyre.

== Version 2.4.10 (2021-05-18)

* Improve speed of dynamic object creation.  Reported by Charlie Ablett.

== Version 2.4.9 (2021-04-22)

* Change example from Fixnum to Integer.  Thanks to Tim Chambers.
* Now works with frozen string literals.  Requested by Jeremy Evans.

== Version 2.4.8 (2020-07-21)

* Bug fix array self assignment.  Thanks to Spencer McIntyre.
* Bug fix Stringz max_length.  Thanks to cdelafuente-r7.

== Version 2.4.7 (2020-03-31)

* Fix choice assignment inside arrays.  Reported by Spencer McIntyre.

== Version 2.4.6 (2020-02-27)

* More encoding fixes.  Thanks to Aaron Patterson.

== Version 2.4.5 (2020-02-21)

* Small typo fixes to examples.
* Fix encoding issue for ruby 2.7.  Thanks to Aaron Patterson.
* Quieter test output.

== Version 2.4.4 (2018-10-03)

* Display a hint when endian is omitted.  Requested by Tails.