@@ -13,6 +13,7 @@ require 'bindata/int'
 require 'bindata/primitive'
 require 'bindata/record'
 require 'bindata/rest'
+require 'bindata/section'
 require 'bindata/skip'
 require 'bindata/string'
 require 'bindata/stringz'
